--- a/app/views/signin.hbs
+++ b/app/views/signin.hbs
@@ -1,19 +1,38 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html>
- 
 <head>
-    <title></title>
+	<title>Pick-me-mon | Login</title>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	<style>
+		body 		{ padding-top:80px; }
+	</style>
 </head>
- 
 <body>
-    <form id="signin" name="signin" method="post" action="signin">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign In" />
-    </form>
- 
+    <div class="container">
+        <div class="col-sm-6 col-sm-offset-3">
+            <h1><span class="fa fa-sign-in"></span> Login</h1>
+
+            <!-- LOGIN FORM -->
+            <form id="signin" name="signin" method="post" action="signin">
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="text" class="form-control" name="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+
+                <input class="btn btn-danger" type="submit" value="Sign In" />
+            </form>
+
+            <hr>
+
+            <p>Need an account? <a href="/signup">Signup</a></p>
+            <p>Or go <a href="/">home</a>.</p>
+        </div>
+    </div>
 </body>
- 
 </html>
