--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -1,23 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
- 
 <head>
-    <title></title>
+    <title>Pick-me-mon | Signup</title>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+    <link rel = "stylesheet" href="/assets/css/style.css" type="text/css"/>
+    <style>
+        body        { padding-top:80px; }
+    </style>
 </head>
- 
 <body>
+<div class="container">
+
+<div class="col-sm-6 col-sm-offset-3">
+
+    <h1><span class="fa fa-sign-in"></span> Signup</h1>
+
+    <!-- LOGIN FORM -->
     <form id="signup" name="signup" method="post" action="/signup">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="email" />
-        <label for="firstname">Firstname</label>
-        <input name="firstname" type="text" />
-        <label for="lastname">Lastname</label>
-        <input name="lastname" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <div class="form-group">
+            <label for="email">Email: </label>
+            <input type="email" class="form-control" name="email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Create Password: </label>
+            <input type="password" class="form-control" name="password">
+        </div>
+
+        <div class="form-group">
+            <label for="firstname">First Name: </label>
+            <input type="text" class="form-control" name="firstname">
+        </div>
+
+        <div class="form-group">
+            <label for="lastname">Last Name: </label>
+            <input type="text" class="form-control" name="lastname">
+        </div>
+
+        <div class="form-group">
+            <label for="age">Age: </label>
+            <input type="number" class="form-control" name="age">
+        </div>
+
+        <div class="form-group">
+            <label for="bio">Bio: </label>
+            <input type="textarea" rows="5" class="form-control" name="bio">
+        </div>
+
+        <div class="form-group">
+            <label for="poketype">PokeType: (Enter either Fire, Water or Grass) </label>
+            <input type="text" class="form-control" name="poketype">
+        </div>
+
+        <input class="btn btn-danger" type="submit" value="Sign Up" />
     </form>
- 
+
+    <hr>
+
+    <p>Already have an account? <a href="/signin">Login</a></p>
+    <p>Or go <a href="/">home</a>.</p>
+
+</div>
+
+</div>
 </body>
- 
 </html>
