--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -22,11 +22,10 @@
 		<div class="col-sm-6">
 			<div class="well">
 					<p>
-						<strong>Name: Clarke Fry</strong>{{User.name}}<br>
-						<strong>Age: 28 </strong>{{age}}<br>
-						<strong>Interested In: Women </strong>{{interest}}<br>
-						<strong>Bio: Here is my short bio! </strong>{{bio}}<br>
-						<strong>Pokemon Type: Fire </strong>{{poketype}}<br>
+						<strong>Name: </strong><br>
+						<strong>Age: </strong><br>
+						<strong>Bio: </strong><br>
+						<strong>Pokemon Type: </strong><br>
 					</p>
 			</div>
 		</div>
