--- a/app/views/main.hbs
+++ b/app/views/main.hbs
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Logo Goes Here</a>
+          {{!-- <a class="navbar-brand" href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/180122/43da7f651c93970f1dc39b9430fc5a36.png" alt="pokemon-font" border="0"></a> --}}
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -36,9 +36,9 @@
     </nav>
     <div class="container">
         <div class="jumbotron text-center">
-            <h1>Pick-me-mon</h1>
+            <a href="https://fontmeme.com/pokemon-font/"><img src="https://fontmeme.com/permalink/180122/93010152911ba48c81bd925d226d74eb.png" alt="pokemon-font" border="0"></a>
 
-            <p>The dating app for those who love to catch Pokemon - and a hot date.</p>
+            <p><strong>The dating app for those who love to catch Pokemon - and a hot date.</strong></p>
         </div>
     </div>
 </body>
