added swipe and battle functionality

--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -49,7 +49,7 @@
 				<div class="well wellright">
 						<p>
 							<h3>Profile</h3>
-							<strong>Name:</strong> Seamus<br>
+							<strong>First name:</strong> Seamus<br>
 							<strong>Age:</strong> 28<br>
 							<strong>Interested In:</strong> Women<br>
 							<strong>Pokemon Type:</strong> Fire<br>
@@ -62,7 +62,7 @@
 			<div class = "col-sm-6">
 				<div class="well wellcenter">
 					<h3>Your next captor is waiting!</h3><br>
-					<button class="btn btn-danger btn-lg match">Pick em!</button>
+					<a href="/swiper"><button class="btn btn-danger btn-lg match">Pick em!</button></a>
 				</div>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 				<div class="well">
 					<h3>My Captors</h3>
 
-					<a href="/battle"><img width ="120px" name="grass" src="https://orig00.deviantart.net/d8d1/f/2013/229/5/a/bw_grass_basic_pokemon_card_blank_by_the_ketchi-d6i22ey.png"></img></a>
+					<a href="/pbattle.html"><img width ="120px" name="grass" src="https://orig00.deviantart.net/d8d1/f/2013/229/5/a/bw_grass_basic_pokemon_card_blank_by_the_ketchi-d6i22ey.png"></img></a>
 
 					<img width="120px" name="water" src="http://www.pokebeach.com/images/fake-cards/water/gym/basic.jpg"></img>
 
