--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("../images/bg.jpg") !important;
+	background-image: url("/assets/images/bg.jpg") !important;
 	/*background-color: blue;*/
 }
 
@@ -22,3 +22,66 @@ h2{
 	height: 250px;
 }
 
+/*battle and swipe*/
+
+.swiperbody { 
+background: url(/assets/images/background.png) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: 100% 100%;
+color: white;
+}
+
+.battlebody { 
+background: url(/assets/images/background.png) no-repeat center center fixed; 
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: 100% 100%;
+color: white;
+}
+
+#h3swag{
+	font-family: "Comic Sans MS", cursive, sans-serif;
+}
+
+#player{
+	height:400px;
+	width: 400px;
+}
+
+#opponent{
+	height: 400px;
+	width:400px;
+}
+
+#console {
+  font-size: 12px;
+  font-family:"Inconsolata", "Monaco", "Consolas", "Andale Mono", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+  color: #999;
+  line-height: 18px;
+  margin-top: 20px;
+  max-height: 150px;
+  overflow: auto;
+}
+
+#imgswipe{
+	height: 400px;
+	width:400px;
+}
+
+#mySwipe div b {
+  display:block;
+  font-weight:bold;
+  color:#14ADE5;
+  font-size:20px;
+  text-align:center;
+  margin:10px;
+  padding:100px 10px;
+  box-shadow: 0 1px #EBEBEB;
+  background: #fff;
+  border-radius: 3px;
+  border: 1px solid;
+  border-color: #E5E5E5 #D3D3D3 #B9C1C6;
+}
