--- a/app/views/dashboard.hbs
+++ b/app/views/dashboard.hbs
@@ -46,7 +46,7 @@
 		<div class="row">
 			<!-- LOCAL INFORMATION -->
 			<div class="col-sm-6">
-				<div class="well wellright">
+				<div class="well">
 						<p>
 							<h3>Profile</h3>
 							<strong>First name:</strong> Seamus<br>
@@ -70,15 +70,16 @@
 		<div class = "row">
 			<div class = "col-sm-6">
 				<div class="well">
+
 					<h3>My Captors</h3>
 
-					<a href="/pbattle.html"><img width ="120px" name="grass" src="https://orig00.deviantart.net/d8d1/f/2013/229/5/a/bw_grass_basic_pokemon_card_blank_by_the_ketchi-d6i22ey.png"></img></a>
+					<a href="/battle"><img width ="125px" name="grass" src="/assets/images/grasscard.png"></img></a>
 
-					<img width="120px" name="water" src="http://www.pokebeach.com/images/fake-cards/water/gym/basic.jpg"></img>
+					<a href="/battle"><img width="125px" name="water" src="/assets/images/watercard.png"></img></a>
 
-					<img width="120px" name="fire" src="http://pa4.pokemonaaah.net/pokemon/2-fake-cards/07-myopc/02-step/downloads/cards-new/fire-basic-reg.jpg"></img>
+					<a href="/battle"><img width="125px" name="fire" src="/assets/images/firecard.png"></img></a>
 
-					<img width="120px" name="water" src="http://www.pokebeach.com/images/fake-cards/water/gym/basic.jpg"></img>
+					<a href="/battle"><img width="125px" name="water" src="/assets/images/watercard.png"></img></a>
 
 				</div>
 			</div>
