--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -4,7 +4,7 @@
     <title>Pick-me-mon | Signup</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
-    <link rel = "stylesheet" href="/assets/css/style.css" type="text/css"/>
+    {{!-- <link rel = "stylesheet" href="/assets/css/style.css" type="text/css"/> --}}
     <style>
         body        { padding-top:80px; }
     </style>
