--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,34 @@
 body{
-	background-image: url("/assets/images/bg.jpg") !important;
-	/*background-color: blue;*/
+	background: url("/assets/images/bg.jpg")  no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: 100% 100%;
 }
 
 h2{
 	align: center;
+}
+
+.battlenav{
+	margin-bottom: 80px !important;
+}
+
+.battlebox{
+	margin:40px;
+	padding:10px;
+	display: flex;
+	justify-content: center;
+}
+
+.opponentbox{
+	display: flex;
+	justify-content: left;
+}
+
+.playerbox{
+	display: flex;
+	justify-content: right;
 }
 
 .match{
@@ -18,28 +42,31 @@ h2{
 }
 
 .well{
-	padding: 0px 20px;
 	height: 250px;
+	width: 100%;
+}
+
+#score{
+	height: 125px !important;
+	font-size: 20px;
 }
 
 /*battle and swipe*/
 
 .swiperbody { 
-background: url(/assets/images/background.png) no-repeat center center fixed; 
+background: url("/assets/images/bg.jpg") no-repeat center center fixed; 
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: 100% 100%;
-color: white;
 }
 
 .battlebody { 
-background: url(/assets/images/background.png) no-repeat center center fixed; 
+background: url("/assets/images/bg.jpg") no-repeat center center fixed; 
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: 100% 100%;
-color: white;
 }
 
 #h3swag{
@@ -47,13 +74,11 @@ color: white;
 }
 
 #player{
-	height:400px;
-	width: 400px;
+	height:300px;
 }
 
 #opponent{
-	height: 400px;
-	width:400px;
+	height: 300px;
 }
 
 #console {
@@ -67,21 +92,15 @@ color: white;
 }
 
 #imgswipe{
-	height: 400px;
 	width:400px;
 }
 
 #mySwipe div b {
   display:block;
   font-weight:bold;
-  color:#14ADE5;
   font-size:20px;
   text-align:center;
-  margin:10px;
-  padding:100px 10px;
+  padding: 80px 0px 0px 0px;
   box-shadow: 0 1px #EBEBEB;
-  background: #fff;
-  border-radius: 3px;
-  border: 1px solid;
-  border-color: #E5E5E5 #D3D3D3 #B9C1C6;
+  background: opacity:0.5;
 }
