--- a/app/views/battle.hbs
+++ b/app/views/battle.hbs
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 <link rel = "stylesheet" href="/assets/css/style.css" type="text/css"/>>
 
-	<title>Pickmemon | Battle</title>
+	<title>Battle</title>
 
 </head>
 
