--- a/app/views/swiper.hbs
+++ b/app/views/swiper.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html>
 <head>
-<title>Pick-me-mon | Swipe</title>
+<title>Pickmemon</title>
 <meta http-equiv="X-UA-Compatible" content="IE=8">
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/> 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
