--- a/app/views/swiper.hbs
+++ b/app/views/swiper.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Pickmemon</title>
-<meta http-equiv="X-UA-Compatible" content="IE=8">
+{{!-- <meta http-equiv="X-UA-Compatible" content="IE=8"> --}}
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/> 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
@@ -48,7 +48,7 @@
               <li><a href="#contact">Contact</a></li> -->
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              {{!-- <li><a href="/signin">Login</a></li> --}}
+              <li><a href="/dashboard">Profile</a></li>
               <li class="active"><a href="/logout">Logout <span class="sr-only">(current)</span></a></li>
             </ul>
           </div><!--/.nav-collapse -->
